[tool.hatch.build.targets.wheel]
packages = ["condenses_node_managing"]

[tool.uv.sources]
sidecar-bittensor = { git = "https://github.com/condenses/sidecar-bittensor" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subnet-node-managing"
version = "0.1.0"
description = "Managing & Counting Subnet Nodes (Miners)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "redis>=5.2.1",
    "sidecar-bittensor",
    "rich",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
